<resources>
    <string name="app_name" translatable="false">Akinator Helper</string>
    <string name="module_load">Module load success!</string>
    <string name="base_funtion_title">Base funtions</string>
    <string name="unlock_pro_title">Unlock pro (Hook)</string>
    <string name="game_hack_title">Game hack</string>
    <string name="always_first_try_title">Always first try</string>
    <string name="unlock_relock_game_title">Unlock/Relock pro</string>
    <string name="unlock_game_title">Unlock the game</string>
    <string name="relock_game_title">Relock the game</string>
    <string name="unlock_game_success">Unlock game success!</string>
    <string name="relock_game_success">Relock game success</string>
    <string name="other_title">Other</string>
    <string name="goto_github_title">Browse this project on Github</string>
    <string name="goto_github_summary">One star plz!</string>
    <string name="module_version_title">Module version</string>
    <string name="author_title">Module author</string>
    <string name="author_summary" translatable="false">KyuubiRan</string>
    <string name="all_item_bought_title">Unlock all items in the shop</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="increase_win_times_title">Increase win times</string>
    <string name="increase_lose_times_title">Increase lose times</string>
    <string name="times_to_add">Times to add</string>
    <string name="pref_hack">Preferences hack</string>
    <string name="success_increate_win_times">Increase %d win times</string>
    <string name="success_increate_lose_times">Increase %d lose times</string>
    <string name="num_must_be_greater_than_zero">The number must be greater than zero!</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="set_gz_title">Set gz</string>
    <string name="offline_only">Offline only</string>
    <string name="add_xp_title">Add xp</string>
    <string name="success_set_gz">Success set gz: %d</string>
    <string name="invalid_num">%s is not an valid number!</string>
    <string name="success_add_xp">Success add xp: %d</string>
    <string name="data_will_not_be_sync">Only modified local data and will not be sync to the server.</string>
</resources>